Tracked down bug that had to do with evaluating the prev and next values.

--- a/src/style/Calc.less
+++ b/src/style/Calc.less
@@ -9,13 +9,12 @@
 }
 
 .DisplayContainer {
-  font-family: Lucida Console, Lucida Sans Typewriter, monaco,
-    Bitstream Vera Sans Mono, monospace;
   text-align: right;
   font-size: 30px;
   border-bottom: 1px solid #eee;
   padding-right: 10px;
   line-height: 70px;
+  overflow-x: scroll;
 
   .input-char {
     vertical-align: baseline;
