--- a/src/style/SideBar.less
+++ b/src/style/SideBar.less
@@ -1,6 +1,6 @@
 .SideBar {
   height: calc(100vh - 60px);
-  width: 30vh;
+  width: 15vh;
   position: absolute;
   bottom: 0;
   right: 0;
@@ -10,9 +10,19 @@
 
 .SideBarSetting {
   padding: 10px;
+  font-size: 12px;
 
   h3 {
-    border-bottom: 1px solid #d3d3d3;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
     width: 80%;
+  }
+
+  input {
+    display: block;
+  }
+
+  p {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    width: 50%;
   }
 }
