--- a/src/style/App.less
+++ b/src/style/App.less
@@ -3,9 +3,11 @@ html {
   height: 100vh;
   font-family: Lucida Console, Lucida Sans Typewriter, monaco,
     Bitstream Vera Sans Mono, monospace;
-  background-color: #DFDBE5;
-  background-image: url("data:image/svg+xml,%3Csvg width='16' height='20' viewBox='0 0 16 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%239C92AC' fill-opacity='0.04' fill-rule='evenodd'%3E%3Cpath d='M8 0v20L0 10M16 0v10L8 0M16 10v10H8'/%3E%3C/g%3E%3C/svg%3E");
+  background-color: #000229;
+  background-image: url("https://www.transparenttextures.com/patterns/broken-noise.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
@@ -28,10 +30,11 @@ body {
 
   .App {
     height: 100%;
+    color: white;
 
     .gear {
       position: absolute;
-      top: 80px;
+      top: 60px;
       right: 20px;
       background: url(../assets/icons/gear.svg) left top;
       width: 26px;
@@ -41,7 +44,7 @@ body {
       transition: .5s all ease-out;
 
       &:hover {
-        transform: rotate(30deg);
+        transform: rotate(45deg);
       }
     }
   }
@@ -49,7 +52,7 @@ body {
 
 .App-grid {
   display: grid;
-  grid-auto-rows: 60px 1fr;
+  grid-auto-rows: 60px 1fr auto;
   height: 100%;
 }
 
@@ -57,9 +60,7 @@ body {
   visibility: hidden;
 }
 
-
-
-
 @import "TopNav.less";
 @import "SideBar.less";
+@import "Footer.less";
 @import "Calc.less";
